--- a/README
+++ b/README
@@ -1,1 +1,11 @@
-HELLO
+Hello! 
+
+My name is Ellen and welcome to my Github!
+
+A little bit about myself: I am an Electrical Engineering student at the University of Waterloo. 
+
+My primary interests are in analog design and power electronics [i do code a lil]. 
+
+Feel free to each out to me at 
+Linkedin: www.linkedin.com/in/ellenwang2002
+Email: e58wang@uwaterloo.ca
